<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lockScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bioLock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_lock_24"
            app:tint="@android:color/darker_gray" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pinLock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pinPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin_prompt"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/pinText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/pinText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/pin_button_1"
                style="@style/PinButton"
                android:text="@string/_1"
                android:textSize="36sp" />

            <Button
                android:id="@+id/pin_button_2"
                style="@style/PinButton"
                android:text="@string/_2"
                android:textSize="36sp" />

            <Button
                android:id="@+id/pin_button_3"
                style="@style/PinButton"
                android:text="@string/_3"
                android:textSize="36sp" />

            <Button
                android:id="@+id/pin_button_4"
                style="@style/PinButton"
                android:text="@string/_4"
                android:textSize="36sp" />

            <Button
                android:id="@+id/pin_button_5"
                style="@style/PinButton"
                android:text="@string/_5"
                android:textSize="36sp" />

            <Button
                android:id="@+id/pin_button_6"
                style="@style/PinButton"
                android:text="@string/_6"
                android:textSize="36sp" />

            <Button
                android:id="@+id/pin_button_7"
                style="@style/PinButton"
                android:text="@string/_7"
                android:textSize="36sp" />

            <Button
                android:id="@+id/pin_button_8"
                style="@style/PinButton"
                android:text="@string/_8"
                android:textSize="36sp" />

            <Button
                android:id="@+id/pin_button_9"
                style="@style/PinButton"
                android:text="@string/_9"
                android:textSize="36sp" />

            <Button
                android:id="@+id/pin_button_0"
                style="@style/PinButton"
                android:layout_column="1"
                android:text="@string/_0"
                android:textSize="36sp" />
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>